The previous commit didn't work?

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Platforms/MovingPlatform.tscn"]
+open_scenes=[]
 
 [ScriptEditor]
 
