--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=[]
 
 [ScriptEditor]
 
-open_scripts=["res://Platforms/MovingPlatform.gd"]
+open_scripts=[]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
