--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=[]
+open_scenes=["res://World/World.tscn"]
 
 [ScriptEditor]
 
-open_scripts=[]
+open_scripts=["res://World/World.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
